# InfiniteSenseSDK2.0

./: .gitignore  README.md
.github/workflows/: cmake-single-platform.yml
assets/3dmodel/: SYNC_V4_2026_06_22.step
assets/doc/: firmware.md
example/: CMakeLists.txt
example/GigeCam/: CMakeLists.txt  main_ros.cpp  mv_cam.cpp
example/NetCam/: CMakeLists.txt  main.cpp  main_ros.cpp  main_ros2.cpp  mv_cam.cpp
example/VideoCam/: CMakeLists.txt  main.cpp  main_ros.cpp  main_ros2.cpp  video_cam.cpp  video_cam.h
firmware/: SDK2_FIRMWARE_2025-06-15.elf  SDK2_FIRMWARE_2025-06-15.uf2
infinite_sense_core/: CMakeLists.txt
infinite_sense_core/include/: messenger.h
infinite_sense_core/src/: messenger.cpp  net.cpp  ptp.cpp  usb.cpp
tools/data_analysis/: data_collect.py  pyproject.toml
